@@ -55,7 +55,10 @@ class GO_Servermanager_Cron_SubCron extends GO_Base_Cron_AbstractCron {
 				trigger_error("Config file ".$installation->configPath." not found");
 				continue;
 			}		
-			$cmd = GO::config()->root_path.'groupofficecli.php -q -r=cron/run -c="'.$installation->configPath.'" &';	
+			
+			$config = $installation->getConfig();
+			
+			$cmd = $config['root_path'].'groupofficecli.php -q -r=cron/run -c="'.$installation->configPath.'" &';	
 			system($cmd);			
 		}
 	}
